OER copyright info.

--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -343,11 +343,9 @@
         <br />© Copyright <span lang="fr">Dominique Archambault, Université Paris 8</span> &amp; John Gilligan, Dublin Institute of Technology<!-- @@no year in Word doc -->.
         <!-- DIT & UP8 folder https://drive.google.com/drive/folders/0B_IRtMIKdfI5Q2hFM2dTeXlmYmc : only contains Google Docs file; @@No Legal folder; not able to add one-->
       </li>
-      <!-- OER for "Understanding the Principles of Software Accessibility": -->
-      <li class="UP8" id="fl-step-2-06">Understanding Software Accessibility:
-        (<a class="UP8" href="https://drive.google.com/drive/folders/0B_IRtMIKdfI5S1Rza2dNTHdDNmM">Google Drive folder</a>): 
-        <!-- OER folder: https://drive.google.com/drive/folders/0B_IRtMIKdfI5S1Rza2dNTHdDNmM @@ no assets registry -->
-        <!-- @@check copyright in https://drive.google.com/open?id=1mLE2WbRGTYqu9jhWi801I0eycUkKFUKgqXuwdpRd8tw -->
+      <li class="UP8" id="fl-step-2-06">Understanding (the Principles of) Software Accessibility
+        (<a class="UP8" href="https://drive.google.com/drive/folders/0B_IRtMIKdfI5S1Rza2dNTHdDNmM">Google Drive folder</a>).<!-- @@ no assets registry -->
+        <br />© Copyright <span lang="fr">Dominique Archambault, Université Paris 8</span>.<!-- Copyright described in https://drive.google.com/open?id=1mLE2WbRGTYqu9jhWi801I0eycUkKFUKgqXuwdpRd8tw -->
         <ul>
           <li>
             <a href="https://drive.google.com/open?id=0B_IRtMIKdfI5d0JDWWtsT2k3S2s">Understanding Software Accessibility (<abbr>PDF</abbr>)</a>.
@@ -355,13 +353,12 @@
           <li>
             <a href="https://vimeo.com/199366837">Video on Vimeo</a> and 
             <a href="https://drive.google.com/open?id=0B_IRtMIKdfI5VndIcmIzZ2oyeDQ">subtitles in <abbr>SRT</abbr> format</a>.
-            <!-- @@where is the video? -->
           </li>
         </ul>
       </li>
       <li class="DIT UP8" id="fl-step-2-08">Exploring Screen Readers
-        (<a href="https://drive.google.com/drive/folders/0B6PTy2fBpskdNnNrNFRDbkIxblk">Google Drive folder</a>): 
-        <!-- Dublin Institute of Technology (DIT) &amp; Université Paris 8 (UP8), 2015 -->
+        (<a href="https://drive.google.com/drive/folders/0B6PTy2fBpskdNnNrNFRDbkIxblk">Google Drive folder</a>). 
+        <br />© Copyright John Gilligan, Dublin Institute of Technology, 2015 &amp; <span lang="fr">Dominique Archambault, Université Paris 8</span>.
         <!-- @@ Legal folder should not be accessible to people outside MOOCAP, but I can't change the sharing settings. -->
         <ul>
           <li>
@@ -371,10 +368,9 @@
         </ul>
       </li>
       <li class="DIT UP8" id="fl-step-2-09">General Document Accessibility Guidelines
-        (<a href="https://drive.google.com/drive/folders/0B6PTy2fBpskdVzBpN0VtUEZvMVE">Google Drive folder</a>):
-        <!-- Dublin Institute of Technology (DIT) &amp; Université Paris 8 (UP8), 2015 -->
-        <!-- @@ Legal folder should not be accessible to people outside MOOCAP, but I can't change the sharing settings.
-        -->
+        (<a href="https://drive.google.com/drive/folders/0B6PTy2fBpskdVzBpN0VtUEZvMVE">Google Drive folder</a>).
+        <br />© Copyright <span lang="fr">Dominique Archambault, Université Paris 8</span> &amp; John Gilligan, Dublin Institute of Technology, 2015.
+        <!-- @@ Legal folder should not be accessible to people outside MOOCAP, but I can't change the sharing settings. -->
         <ul>
           <li>
             <a href="https://drive.google.com/open?id=0B6PTy2fBpskdeVFhbEtVSUNNT2c">Document Accessibility Guidelines (Microsoft Word document)</a>
@@ -383,8 +379,8 @@
       </li>
       <!-- OER for "Automatic Accessibility Checking" (DIT & UP8), step 2.10: -->
       <li class="DIT UP8" id="fl-step-2-10">Document Accessibility Auditing
-        (<a href="https://drive.google.com/drive/folders/0B6PTy2fBpskdLXF4SUJCek5VNjQ">Google Drive folder</a>):
-        <!-- Dublin Institute of Technology (DIT) &amp; Université Paris 8 (UP8), 2015 -->
+        (<a href="https://drive.google.com/drive/folders/0B6PTy2fBpskdLXF4SUJCek5VNjQ">Google Drive folder</a>).
+        <br />© Copyright <span lang="fr">Dominique Archambault, Université Paris 8</span> &amp; John Gilligan, Dublin Institute of Technology, 2015.
         <!-- @@ Legal folder should not be accessible to people outside MOOCAP, but I can't change the sharing settings. -->
         <ul>
           <li>
@@ -394,8 +390,8 @@
         </ul>
       </li>
       <li class="DIT UP8" id="fl-step-2-11">Alternative text
-        (<a href="https://drive.google.com/drive/folders/0B6PTy2fBpskdbDVHUGdrMExXbm8">Google Drive folder</a>): 
-        <!-- Dublin Institute of Technology (DIT) &amp; Université Paris 8 (UP8) -->
+        (<a href="https://drive.google.com/drive/folders/0B6PTy2fBpskdbDVHUGdrMExXbm8">Google Drive folder</a>).
+        <br />© Copyright John Gilligan, Dublin Institute of Technology, 2015 &amp; <span lang="fr">Dominique Archambault, Université Paris 8</span>.
         <!-- @@ Legal folder should not be accessible to people outside MOOCAP, but I can't change the sharing settings.
         -->
         <ul>
@@ -1078,7 +1074,7 @@
       <li>Alternative Text: 
         <!-- OER folder: https://drive.google.com/drive/folders/0B_IRtMIKdfI5OHVBUGJDVjRoeTg -->
         <a href="https://drive.google.com/open?id=0B6PTy2fBpskdSUZ1NVRJYWdwNWc">Tian An Men image used in the quiz for text alternatives</a><!-- https://drive.google.com/drive/folders/0B6PTy2fBpskdbDVHUGdrMExXbm8 -->
-        <br />© Copyright <span lang="fr">Dominique Archambault, Université Paris 8</span>, <abbr>CC</abbr>-BY-4.0).
+        <br />© Copyright <span lang="fr">Dominique Archambault, Université Paris 8</span>; <abbr>CC</abbr>-BY-4.0).
       </li>
       <li>Different Ways to Access the Desktop: 
         <!-- OER folder: https://drive.google.com/drive/folders/0B_IRtMIKdfI5c196X2tTai1HdGs @@ no Assets Registry -->
