New section: content readability.

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -288,6 +288,31 @@
       * Tesseract: Open Source OCR Engine: https://github.com/tesseract-ocr/tesseract (Licence: Apache 2.0; plus other liberal licence for Leptonica).
     -->
 
+
+    <h2>Content Readability</h2>
+    <ul>
+      <li>DuBay, William H.:
+        <a href="http://files.eric.ed.gov/fulltext/ED490073.pdf">The Principles of Readability</a>, 2004.
+        <!-- downloaded -->
+      </li>
+      <li>Mikk, Jaan: 
+        <a href="">Methods for determining optimal readability of texts</a>,
+        <i class="journal">Journal of Quantitative Linguistics</i>, Volume 2, Issue 2 (1995).
+        <!-- http://www.tandfonline.com/doi/abs/10.1080/09296179508590041 (only short abstract) -->
+      </li>
+      <li>Cannon, Barbara; Edmond, Grace: 
+        <a href="http://leader.pubs.asha.org/article.aspx?articleid=2289630">A Few Good Words Using Core Vocabulary to Support Nonverbal Students</a>,
+        <i class="magazine">The Asha Leader</i>, Vol. 14 (April 2009): 20-23.
+        <!-- @@check/read -->
+      </li>
+      <!-- 
+      <li>:
+        <a href=""></a>
+      </li>
+      -->
+    </ul>
+
+
   </main>
 
   <footer>
