New section: Advice, Tips and Tutorials.

--- a/tts.html
+++ b/tts.html
@@ -172,6 +172,24 @@
       </li>
     </ul>
 
+
+    <h2>Advice, Tips and Tutorials</h2>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/watch?v=tb5yfXL7_UU">Install Eloquence <abbr>TTS</abbr> On <abbr>NVDA</abbr> [HOW TO] </a>,
+        8-minute YouTube video (November 2014) that shows how to download Eloquence, install it,
+        and change the <abbr>NVDA</abbr> preferences to use Eloquence.
+      </li>
+      <li>
+        <a href=""></a>
+      </li>
+    </ul>
+    <!--  
+      * Nilkanth S. Shet Shirodkar: Text-To-Speech (TTS) Using Festival. January 2015. https://www.youtube.com/watch?v=lyRjx3CyhMA 
+      * HakTip: Free Text to Speech with Linux. (Febuary 2012): https://www.youtube.com/watch?v=4uKTamXonPs
+        Using Festival on Ubuntu. Also uses xsel and bash scripts. 
+        - From the comments: Omilo - a GUI for Festival / Flite: https://sourceforge.net/projects/o-milo/ (for Windows and Linux).
+    -->
   </main>
 
   <footer>
