readability formulas (r, python)

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -305,6 +305,43 @@
         <i class="magazine">The Asha Leader</i>, Vol. 14 (April 2009): 20-23.
         <!-- @@check/read -->
       </li>
+      <li>Scott, Brian:
+        <a href="http://www.readabilityformulas.com/search/pages/Readability_Formulas/">Readability Formulas</a>:
+        page that lists many readability formulas for English.
+        Brian Scott is a freelance writer.
+      </li>
+      <li>Simple English Wikipedia:
+        <a href="https://simple.wikipedia.org/wiki/List_of_readability_tests">List of readability tests</a>.
+      </li>
+      <li>For readability analysis in R, see the package 
+        <a href="https://cran.r-project.org/package=koRpus">koRpus</a>:
+        <ul>
+          <li>
+            <a href="http://artax.karlin.mff.cuni.cz/r-help/library/koRpus/html/dale.chall.html">Readability: Dale-Chall Readability Formula</a>;
+            <!-- koRpus - An R Package for Text Analysis: http://artax.karlin.mff.cuni.cz/r-help/library/koRpus/html/00Index.html -->
+          </li>
+          <li>
+            <a href="https://cran.r-project.org/web/packages/koRpus/koRpus.pdf">Package ‘koRpus’ (documentation)</a>.
+          </li>
+          <li>
+            <a href="https://cran.r-project.org/web/packages/koRpus/vignettes/koRpus_vignette.pdf">Using the koRpus Package for Text Analysis</a> (5 June 2016).
+          </li>
+        </ul>
+      </li>
+      <!-- The Dale-Chall and the New Dale-Chall readability formulas use a list of 3,000 common English words.
+        This list is avaiable on many websites, e.g. 
+        * https://github.com/wooorm/dale-chall (List of familiar American-English words: The New Dale-Chall (1995)), MIT licence. 
+        * http://www.readabilityformulas.com/articles/dalechallreadabilitywordlist.php 
+        * https://duckduckgo.com/?q=dale+chall+list+3000+words&ia=web 
+      -->
+      <li>For readability analysis in Python, see the package
+        <a href="https://pypi.python.org/pypi/textstat">textstat</a> (part of Pypi; see also the
+        <a href="https://github.com/shivam5992/textstat">textstat GitHub repository</a>).
+      </li>
+      <li>Basu, Saikat:
+        <a href="http://www.makeuseof.com/tag/writing-reader-friendly-check-8-readability-testing-web-tools/">8 Readability Web Tools to Test Your Writing Quality</a>,
+        <i class="website">MakeUseOf</i>, 10 March 2010.
+      </li>
       <!-- 
       <li>:
         <a href=""></a>
