--- a/accessibilityforusers.html
+++ b/accessibilityforusers.html
@@ -21,7 +21,7 @@
       <li><a href="designforall.html">Design for All</a></li>
       <li><a href="personas.html">Personas</a></li>
       <li><a href="WebAppAccessibilityResources.html">Web Applications</a></li>
-      <li class="active"><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
+      <li><a href="WebAccessibilityTools.html">Web Accessibility Tools</a></li>
       <li><a href="elearning.html">Accessibility in e-Learning</a></li>
       <li><a href="contentmanagement.html">Content Management Systems</a></li>
       <li><a href="MobileAccessibilityResources.html">Mobile Accessibility</a></li>
@@ -33,6 +33,9 @@
       <li><a href="crowdsourcing.html" title="Crowdsourcing &amp; Human-Based Computation">Crowdsourcing</a></li>
       <li><a href="assistivetechnology.html">Assistive Technology</a></li>
       <li><a href="tts.html"><abbr title="Text-to-speech software">TTS</abbr></a></li>
+
+      <li class="active"><a href="accessibilityforusers.html">Accessibility for Computer Users</a></li>
+      <li><a href="terminology.html">Terminology</a></li>
     </ul>
   </nav>
 
