--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </li>
     </ul>
 
-    <h2>Other</h2>
+    <h2>Implementing Accessibility or Design for All</h2>
     <ul>
       <li><a href="courses.html">(Online) Courses and Accessibility or Disability</a>
       </li>
@@ -52,6 +52,26 @@
       </li>
       <li><a href="accessibilityguidelines.html">Accessibility Guidelines</a>.
       </li>
+    </ul>
+
+
+    <h2>Personalisation</h2>
+    <ul>
+      <li><abbr title="General Public Inclusive Infrastucture">GPII</abbr>:
+        <ul>
+          <li>
+            <a href="gpii/gpii-for-developers.html"><abbr>GPII</abbr>/Cloud4all for Developers</a>.
+          </li>
+          <li>
+            <a href="gpii/integrating-sublimetext.html">Integrating Sublime Text with <abbr>GPII</abbr></a>.
+          </li>
+        </ul>
+      </li>
+    </ul>
+
+
+    <h2>Other</h2>
+    <ul>
       <li><a href="GameAccessibilityResources.html">Game Accessibility Resources</a>.
       </li>
       <li>
@@ -66,31 +86,38 @@
       </li>
       <li><a href="tts.html">Text-to-speech software</a>.
       </li>
-      <li><abbr title="General Public Inclusive Infrastucture">GPII</abbr>:
-        <ul>
-          <li>
-            <a href="gpii/gpii-for-developers.html"><abbr>GPII</abbr>/Cloud4all for Developers</a>.
-          </li>
-          <li>
-            <a href="gpii/integrating-sublimetext.html">Integrating Sublime Text with <abbr>GPII</abbr></a>.
-          </li>
-        </ul>
+    </ul>
+
+
+    <h2>Unsorted Links</h2>
+    <h3>European Projects</h3>
+    <ul>
+      <li>The website of the European project 
+        European Internet Inclusion Initiative <abbr>EIII</abbr> (2013-2015)
+        also has a <a href="http://www.eiii.eu/resources/">resouces page</a>.
+        However, more importantly, the 
+        <strong>search form</strong> helps you find accessibility-related
+        resources on the Web.
+      <!-- Searches mostly W3C and the eAccessPlus wiki, which seems to be down. -->
+      </li>
+      <li>
+        <a href="https://www.w3.org/WAI/DEV/"><abbr title="Web Accessibility Initiative">WAI</abbr>-DEV Project</a>
+        (April 2014 - March 2016)<!-- (March 2016?) @@check deliverables!! -->
+      </li>
+      <li>
+        <a href="http://www.funka.com/en/projekt/compare/">COMPARE</a>
+        (ERASMUS+ project)
       </li>
     </ul>
-    <p>
-      The website of the European project 
-      European Internet Inclusion Initiative <abbr>EIII</abbr> (2013-2015)
-      also has a <a href="http://www.eiii.eu/resources/">resouces page</a>.
-      However, more importantly, the 
-      <strong>search form</strong> helps you find accessibility-related
-      resources on the Web.
-      <!-- Searches mostly W3C and the eAccessPlus wiki, which seems to be down. -->
-    </p>
-
     <!-- Unsorted: 
       * Noun Project: https://thenounproject.com/about/ 
+      * Engineering4Society Conference 2016: Programme (+ link to Proceedings and YouTube videos): http://www.engineering4society.org/ / http://www.esat.kuleuven.be/stadius/engineering4society/programme.php
+      * Engineering4Society Conference 2015: Proceedings: http://www.engineering4society.org/2015 / http://www.esat.kuleuven.be/stadius/engineering4society/2015/proceedings.php 
+      * Lexical Quality as a Measure for Textual Web Accessibility - Paper for Web Accessibility Metrics Symposium (W3C Web Accessibility Metrics Symposium, 05.12.2011: https://www.w3.org/WAI/RD/2011/metrics/paper5/ 
+      * David Swallow: "Sounding out the web: accessibility for deaf and hard of hearing people [Part 1]", Paciello Group, 13.02.2017: https://www.paciellogroup.com/blog/2017/02/sounding-out-the-web-accessibility-for-deaf-and-hard-of-hearing-people-part-1/ 
     -->
-    <h2>Unsorted Links</h2>
+
+    <h3>Other</h3>
     <ul>
       <li>Swierenga, Sara J.; Pierce, Graham L.: 
         <a href="http://uxpamagazine.org/should-we-conduct-this-usability-study/">Should We Conduct this Usability Study? Ethics Considerations in Evaluations</a>,
