--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -77,7 +77,7 @@
     <h3>Day-in-the-life Stories</h3>
     <p>The day-in-the-life stories are available under the following licence:
       <span lang="en-US">Creative Commons Attribution 4.0 International Licence (<abbr>CC BY</abbr> 4.0).</span>
-      Below are the links to the invididual files.
+      Below are the links to the individual files.
       You can also go directly to the 
       <a href="https://drive.google.com/drive/folders/0B5w8EXu9wtOqbndxbXB6bmp6VzA">Google Drive folder</a> that contains these files.
     </p>
