--- a/disabilities/learning-difficulties.html
+++ b/disabilities/learning-difficulties.html
@@ -22,10 +22,26 @@
 
   <main>
     <p><strong>Note</strong>: the term &ldquo;learning disability&rdquo; means different things in 
-      different parts of the world (see below).
+      different parts of the world (see <a href="#dyslexia">below</a>).
+      The Learning Disabilities Association of America (<abbr>LDA</abbr>) lists the following 
+      <a href="https://ldaamerica.org/types-of-learning-disabilities/">types of learning disabilities</a>:
+    </p>
+    <ul>
+      <li>Auditory Processing Disorder (<abbr>APD</abbr>) or Central Auditory Processing Disorder,</li>
+      <li>dyscalculia,</li>
+      <li>dysgraphia,</li>
+      <li>dyslexia</li>
+      <li>Language Processing Disorder,</li>
+      <li>non-verbal learning disabilities,</li>
+      <li>visual perceptual/visual motor deficit.</li>
+    </ul>
+    <p><abbr>LDA</abbr> also lists a few related disorders:
+      <abbr title="attention deficit hyperactivity disorder">ADHD</abbr>, 
+      dyspraxia, executive functioning [disorder] and memory-related disorders.
     </p>
 
-    <h2>Dyslexia</h2>
+
+    <h2 id="dyslexia">Dyslexia</h2>
     <p><dfn>Dyslexia</dfn> is a learning difficulty characterised by problems in phonological processing and trouble with reading and spelling in spite of normal intelligence.
       In the <abbr>USA</abbr> and Canada, dyslexia is categorised as a &ldquo;learning disability&rdquo;.
       However, in the <abbr>UK</abbr>, learning disability refers to a reduced intellectual ability, 
@@ -37,6 +53,29 @@
       see <a href="https://www.psychiatry.org/patients-families/specific-learning-disorder/what-is-specific-learning-disorder">What Is Specific Learning Disorder?</a>
       on the website of the American Psychiatric Association (<abbr>APA</abbr>), who publishes <abbr>DSM</abbr> 5.
     </p>
+
+    <ul>
+      <li>Being Dyslexic (<abbr>UK</abbr>):
+        <a href="http://www.beingdyslexic.co.uk/pages/information/general-information/dyslexia-basics/what-is-dyslexia.php">What is Dyslexia?</a>
+        This page lists several definitions of dyslexia.
+      </li>
+      <li>Davis Dyslexia Association International (<abbr>USA</abbr>):
+        <a href="https://www.dyslexia.com/about-dyslexia/understanding-dyslexia/">Understanding Dyslexia</a>.
+      </li>
+      <li>ReadingHorizons (<abbr>USA</abbr>):
+        <a href="http://athome.readinghorizons.com/research/executive-functioning-and-dyslexia">Executive Functioning and Dyslexia Symptoms</a>.
+      </li>
+      <li>Braams:
+        <a href="https://www.braams.nl/kennisverdieping/dyslexie/schrijfontwikkeling-en-leerproblemen" hreflang="nl" lang="nl">Schrijfontwikkeling en leerproblemen</a>:
+        partial Dutch translation of an article by Charles A. MacArthur (<i class="journal">Remedial Teaching</i>, 2006).
+        Braams is a Dutch organisation specialising in learning difficulties.
+        Its founder, 
+        <a href="https://www.braams.nl/over-braams/curriculum-tom-braams" hreflang="nl" lang="nl">Tom Braams</a>,
+        published the book
+        <a class="booktitle" href="https://www.braams.nl/kennisverdieping/boeken/dyslexie-een-complex-taalprobleem" hreflang="nl" lang="nl">Dyslexie, een complex taalprobleem</a>
+        (4th edition, 2002).
+      </li>
+    </ul>
 
   </main>
 
