New section: exectutive functioning problems.

--- a/disabilities/learning-difficulties.html
+++ b/disabilities/learning-difficulties.html
@@ -65,6 +65,10 @@
       <li>ReadingHorizons (<abbr>USA</abbr>):
         <a href="http://athome.readinghorizons.com/research/executive-functioning-and-dyslexia">Executive Functioning and Dyslexia Symptoms</a>.
       </li>
+      <li>Dyslexia Scotland:
+        <a href="http://www.dyslexiascotland.org.uk/addressing-dyslexia-toolkit">Addressing Dyslexia Toolkit</a>:
+        a toolkit for teachers.
+      </li>
       <li>Braams:
         <a href="https://www.braams.nl/kennisverdieping/dyslexie/schrijfontwikkeling-en-leerproblemen" hreflang="nl" lang="nl">Schrijfontwikkeling en leerproblemen</a>:
         partial Dutch translation of an article by Charles A. MacArthur (<i class="journal">Remedial Teaching</i>, 2006).
@@ -75,6 +79,22 @@
         <a class="booktitle" href="https://www.braams.nl/kennisverdieping/boeken/dyslexie-een-complex-taalprobleem" hreflang="nl" lang="nl">Dyslexie, een complex taalprobleem</a>
         (4th edition, 2002).
       </li>
+    </ul>
+
+
+    <h2>Executive Functioning Problems</h2>
+    <ul>
+      <li>DyslexiaHelp, University of Michigan: 
+        <a href="http://dyslexiahelp.umich.edu/professionals/dyslexia-school/executive-function-disorders">Executive Function Problems</a>.
+      </li>
+      <li>Headway - the brain injury association (<abbr>UK</abbr>):
+        <a href="https://www.headway.org.uk/about-brain-injury/individuals/effects-of-brain-injury/executive-dysfunction/">Executive dysfunction after brain injury</a>.
+      </li>
+      <!-- 
+      <li>
+        <a href=""></a>
+      </li>
+      -->
     </ul>
 
   </main>
