--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -74,13 +74,6 @@
         * Dyslexia: Fonts:
           ** Neil Milliken: "On fonts and dyslexia", 16.04.2015: https://atrophiedmind.wordpress.com/2015/04/16/on-fonts-and-dyslexia/ 
       -->
-      <li>Accede <abbr>PDF</abbr> Project:
-        <a href="http://www.pdf-accessible.com/en/">Accessibility of <abbr>PDF</abbr></a>
-        (English translation of
-        <a href="http://www.pdf-accessible.com/" lang="fr">Accessibilité des documents <abbr>PDF</abbr> et ePub</a>).
-        <br />Guidelines for making <abbr>PDF</abbr> documents accessibile with Adobe InDesign;
-        you can even download a practice document.
-      </li>
       <li>Microsoft in Government:
         <a href="https://www.youtube.com/playlist?list=PLY_z_-LKXnjmEHGI8ku6L94KCr4zXvF6J">Creating Accessible Documents</a>:
         YouTube playlist consisting of 10 short videos.
@@ -92,12 +85,30 @@
         <a href="https://www.microsoft.com/enable/products/office2013/default.aspx">Accessibility in Microsoft Office 2013</a>
         on the Microsoft Accessibility website.
       </li>
+    </ul>
+
+    <h3 id="pdf">Portable Document Format (<abbr>PDF</abbr>)</h3>
+    <ul>
+      <li>Accede <abbr>PDF</abbr> Project:
+        <a href="http://www.pdf-accessible.com/en/">Accessibility of <abbr>PDF</abbr></a>
+        (English translation of
+        <a href="http://www.pdf-accessible.com/" lang="fr">Accessibilité des documents <abbr>PDF</abbr> et ePub</a>).
+        <br />Guidelines for making <abbr>PDF</abbr> documents accessibile with Adobe InDesign;
+        you can even download a practice document.
+      </li>
       <li>
         <a href="https://www.youtube.com/playlist?list=PLmfVOnJxeSEXsEKv2i20nYMHYuFEcl4fO">Metzessible <abbr title="Portable Document Format: Universal Accessibility">PDF/UA</abbr> Series</a>:
         YouTube playlist about accessible <abbr>PDF</abbr>.
         <a href="https://en.wikipedia.org/wiki/PDF/UA"><abbr>PDF/UA</abbr></a>
         is the informal name for
         <a href="http://www.iso.org/iso/iso_catalogue/catalogue_tc/catalogue_detail.htm?csnumber=64599">ISO 14289</a>.
+      </li>
+      <li><abbr title="PDF Accessibility Validation Engine">PAVE</abbr>: 
+        <a href="http://pave-pdf.org/index.en.html">Validate and Fix <abbr>PDF</abbr> Accessibility</a>:
+        this site has an online <abbr>PDF</abbr> accessibility checker.
+        The <a href="https://www.youtube.com/watch?v=5daOdS2yJYM">YouTube video &ldquo;Introduction to <abbr>PAVE</abbr> v2.0&rdquo;</a>
+        shows how the tool works.
+        There is also a <a href="https://www.youtube.com/watch?v=u_Le6aNsO0U">German version of the video</a>.
       </li>
     </ul>
 
