--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@
 
     <h3>Other</h3>
     <ul>
+      <li>
+        <a href="https://zeroproject.org/">Zero Project</a>:
+        an initiative of the <a href="https://esslfoundation.org/">Essl Foundation</a>.
+        Its goal is to create a world without barriers.
+        See also
+        <a href="https://www.youtube.com/user/Zeroprojectorg">ZeroProject on YouTube</a>.
+      </li>
       <li>Swierenga, Sara J.; Pierce, Graham L.: 
         <a href="http://uxpamagazine.org/should-we-conduct-this-usability-study/">Should We Conduct this Usability Study? Ethics Considerations in Evaluations</a>,
         <i class="magazine">User Experience</i>, November 2012.
