Barclays: "Diverse Personas".

--- a/personas.html
+++ b/personas.html
@@ -69,6 +69,10 @@
         <a href="https://en.wikipedia.org/wiki/Assisted_living"><abbr title="ambient assisted living">AAL</abbr></a> 
         and related projects.
       </li>
+      <li>Barclays:
+        <a href="https://www.barclayscorporate.com/insight-and-research/managing-your-business/making-your-business-accessible/inclusive-design.html">Accessibility - Inclusive Design</a>:
+        this page contains a section on &ldquo;Diverse Personas&rdquo;.
+      </li>
       <li>Inclusive Design Toolkit:
         <a href="http://www.inclusivedesigntoolkit.com/betterdesign2/examplepersonas/examplepersonas.html">Example set of personas</a>:
         a set of 6 personas that represent a family of four generations.
