Graeme Fulton's article, Oct 2016.

--- a/personas.html
+++ b/personas.html
@@ -148,6 +148,10 @@
         <a href="https://medium.com/@indiyoung/describing-personas-af992e3fc527">Describing Personas</a>,
         15 March 2016.<!-- @@reread -->
       </li>
+      <li>Fulton, Graeme:
+        <a href="https://webdesign.tutsplus.com/articles/making-the-web-accessible-for-everyone-with-inclusive-design-and-diverse-personas--cms-27505">Making the Web Accessible for Everyone With Inclusive Design and Diverse Personas</a>,
+        <i class="website">Envato Tuts+</i>, 26 October 2016.<!-- @@reread -->
+      </li>
       <li>Vanderheiden, Gregg:
         <a href="http://lists.w3.org/Archives/Public/w3c-wai-ig/2016AprJun/0321.html">Re: Creating personas for <abbr>WAI</abbr> site redesign</a>,
         <abbr title="Web Accessibility Initiative Interest Group">WAI-IG</abbr> mailing list, 14 June 2016:
