--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -122,6 +122,11 @@
       -->
     </ul>
 
+    <!-- screen readers
+      * Oracle: Orca Screen Reader and Magnifier [Oracle Solaris 11 Accessibility Guide for the GNOME Desktop]: https://docs.oracle.com/cd/E23824_01/html/E24675/ats-2.html 
+    -->
+
+
     <h2>Motor Impairments</h2>
     <ul>
       <li>
