--- a/courses.html
+++ b/courses.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1><span class="h1txt">Courses on Accessibility or Disability</h1>
+    <h1><span class="h1txt">Courses on Accessibility or Disability</span></h1>
   </header>
 
   <nav>
