--- a/personas.html
+++ b/personas.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1><span class="h1txt">Personas for Accessibility</h1>
+    <h1><span class="h1txt">Personas for Accessibility</span></h1>
   </header>
 
   <nav>
