--- a/elearning.html
+++ b/elearning.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1><span class="h1txt">Accessibility in e-Learning</h1>
+    <h1><span class="h1txt">Accessibility in e-Learning</span></h1>
   </header>
 
   <nav>
