Duggin and Duran's accessibility failures.

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -436,6 +436,10 @@
       The tools were tested on these
       <a href="https://alphagov.github.io/accessibility-tool-audit/test-cases.html">test cases with accessibility failures</a>.
     </li>
+    <li>
+      <a href="http://aduggin.github.io/accessibility-fails/">Accessibility Fails</a>
+      by Alistair Duggin and Mehmet Duran is a collection of accessibility failures that can be used to test evaluation tools.
+    </li>
   </ul>
 
   </main>
