--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -43,8 +43,8 @@
         title="International Game Developers Association">IGDA</abbr> Game
         Accessibility <abbr title="Special Interest Group">SIG</abbr></a></strong>. 
         <ul>
-          <li><strong><a href="http://gameaccessibilityguidelines.com/">Game
-            accessibility guidelines</a></strong>.</li>
+          <li><strong><a href="http://gameaccessibilityguidelines.com/">Game accessibility guidelines</a></strong>.
+          </li>
           <li><a
             href="http://igda-gasig.org/events/film-victoria-update-a-game-accessibility-success-story/">Film
             Victoria update – a game accessibility success story</a>, (about the
@@ -144,9 +144,7 @@
         is mostly about game accessibility.
       </li>
       <li>Erin Hawley:
-        &ldquo;<a 
-        href="http://www.freelanceknight.com/accessibility-in-game-design-guest-post-by-erin-hawley/">Accessibility
-        in Game Design</a>&rdquo;, Freelance Knight, 10 August 2015.
+        &ldquo;<a href="http://www.freelanceknight.com/accessibility-in-game-design-guest-post-by-erin-hawley/">Accessibility in Game Design</a>&rdquo;, Freelance Knight, 10 August 2015.
       </li>
       <li>Nathan Lovato:
         &ldquo;<a 
@@ -173,28 +171,27 @@
         <a href="http://www.cooley.com/video-game-accessibility-requirements-starting-october">New
         Video Game Accessibility Requirements Starting in October</a> (15 June 2015). 
       </li>
-      <li>Daniel Starky: "<a
-        href="http://www.polygon.com/2015/2/10/8012451/games-have-basic-huge-accessibility-problems-that-we-celebrate">Games
-        have basic, huge accessibility problems (that we celebrate)</a>", 10
-        February 2015.
+      <li>Daniel Starky: 
+        "<a href="http://www.polygon.com/2015/2/10/8012451/games-have-basic-huge-accessibility-problems-that-we-celebrate">Games have basic, huge accessibility problems (that we celebrate)</a>", 
+        10 February 2015.
+      </li>
+      <li>Richard Moss: 
+        <a href="http://www.polygon.com/features/2014/8/6/5886035/disabled-gamers-accessibility">Why Game Accessibility Matters</a>, 
+        Polygon.com, 6 August 2014.
       </li>
       <li>
-        Richard Moss: 
-        <a href="http://www.polygon.com/features/2014/8/6/5886035/disabled-gamers-accessibility">Why
-        Game Accessibility Matters</a>, Polygon.com, 6 August 2014.
-      </li>
-      <li>
-        <a href="http://www.zenspath.com/home/2013/8/26/the-gamepad-helped-my-daughter-play-her-first-game-and-shes.html">The 
-        GamePad Helped My Daughter Play Her First Game (and She's Almost Blind)</a>,
+        <a href="http://www.zenspath.com/home/2013/8/26/the-gamepad-helped-my-daughter-play-her-first-game-and-shes.html">The  GamePad Helped My Daughter Play Her First Game (and She's Almost Blind)</a>,
         Zenspath, 26 August 2013.
       </li>
-      <li>
-        Richard Moss: 
-        <a href="http://www.polygon.com/features/2013/8/6/4550490/blind-games-rock-vibe">Blind
-        Games: The Next Battleground in Accessibility</a>, Polygon.com, 6 August 2013.
+      <li>Richard Moss: 
+        <a href="http://www.polygon.com/features/2013/8/6/4550490/blind-games-rock-vibe">Blind Games: The Next Battleground in Accessibility</a>, 
+        Polygon.com, 6 August 2013.
       </li>
       <li>PlayGen:
         <a href="http://playgen.com/gamification-inclusion-empowerment/">Gamification for Inclusion and Empowerment</a>.
+      </li>
+      <li><a href="http://handbook.floeproject.org/WebGamesAndSimulations.html">Web Games and Simulations</a>
+        in The Inclusive Learning Design Handbook.
       </li>
     </ul>
 
