+ section: Examples of Accessible Games.

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -219,6 +219,23 @@
       </li>
     </ul>
 
+
+    <h2>Examples of Accessible Games</h2>
+    <ul>
+      <li>
+        <a href="http://www.ics.forth.gr/hci/ua-games/ua-chess/"><abbr>UA</abbr>-Chess</a>:
+        <q>UA-Chess is a fully-functional chess game, developed by the 
+        <a href="http://www.ics.forth.gr/hci">Human-Computer Interaction Laboratory</a> 
+        of <abbr>ICS</abbr>-<abbr>FORTH</abbr> in close cooperation with the 
+        <a href="http://www.ics.forth.gr/hci/cuaat.html">Centre for Universal access &amp; Assistive Technologies</a>, 
+        in the context of the 
+        <a href="http://www.ics.forth.gr/hci/ua-games">Universally Accessible Games (<abbr>UA</abbr>-Games)</a> Activity.</q>
+        <br />
+        <q>UA-Chess was developed using Macromedia Flash MX Professional 7. 
+        Speech recognition and synthesis is supported through the use of Speech Application Language Tags (<abbr>SALT</abbr>) technology.</q>
+      </li>
+    </ul>
+
   </main>
 
   <footer>
