More individual web a11y checking tools.
WAVE and EIII tools.

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -88,6 +88,15 @@
     <h2>Individual Tools</h2>
     <h3 id="codecheckers">Code Checkers</h3>
     <ul>
+      <li>European Internet Inclusion Initiative (<abbr>EIII</abbr>):
+        <a href="http://checkers.eiii.eu/"><abbr>EIII</abbr> Page Checker</a>:
+        tool where you can enter the <abbr>URL</abbr> of a web page that you want to evaluate.
+      </li>
+      <li>Web<abbr title="Accessibility in Mind">AIM</abbr>:
+        <a href="http://wave.webaim.org/">WAVE Web Accessibility Evaluation Tool</a>.
+        Also available as 
+        <a href="http://wave.webaim.org/extension/">browser extensions for Firefox and Chrome</a>.
+      </li>
       <li>
         <a href="https://github.com/yargalot/grunt-accessibility">Grunt Accessibility</a>,
         by Steven Miller is an 
@@ -439,6 +448,16 @@
     <li>
       <a href="http://aduggin.github.io/accessibility-fails/">Accessibility Fails</a>
       by Alistair Duggin and Mehmet Duran is a collection of accessibility failures that can be used to test evaluation tools.
+    </li>
+  </ul>
+
+  <h2>Other Resources and Links</h2>
+  <ul>
+    <li>
+      <a href="http://ictaccessibilitytesting.org/">The <abbr>ICT</abbr> Accessibility Testing Symposium</a>:
+      website of an annual event.
+      The proceedings from 2016 can be downloaded in several formats (<abbr>PDF</abbr>, EPUB or MOBI).
+      <!-- @@download -->
     </li>
   </ul>
 
