WebAIM blog post about UC Berkeley decision.

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -383,6 +383,13 @@
         screen reader compatibility and other issues. Instead of making the content accessible,
         the university decided to remove the content from public view.
       </li>
+      <li>Rowland, Cyndi:
+        <a href="http://webaim.org/blog/uc-berkeley-inaccessibility/"><abbr>UC</abbr> Berkeley Decision Results in Universal Inaccessibility</a>,
+        <i class="blog">Web<abbr>AIM</abbr> blog</i>, 10 March 2017.
+        <br />Since the accessibility requirements (<abbr>e.g.</abbr> captions) predate the creation of the 
+        content that is being withdrawn, Cyndy Rowland writes:
+        <q>Berkeley, America’s <a href="http://admissions.berkeley.edu/rankings">number one</a> public university, a pioneer in social justice, civil rights, and disability rights, has little excuse for these careless decisions.</q>
+      </li>
     </ul>
 
   </main>
