robots: noindex, nofollow.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/meiert-qa.css" title="QA stylesheet" />
   <!-- See quick intro to GitHub pages at https://pages.github.com/ -->
   <!-- See also https://help.github.com/articles/user-organization-and-project-pages/ -->
+  <meta name="robots" content="noindex, nofollow" />
+  <meta name="googlebot" content="noindex, nofollow" />
 </head>
 
 <body id="home">
