--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -40,6 +40,8 @@
     }
     */
   </style>
+  <meta name="robots" content="noindex, nofollow" />
+  <meta name="googlebot" content="noindex, nofollow" />
 </head>
 <body>
   <header>
