--- a/terminology.html
+++ b/terminology.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" type="text/css" media="screen" href="css/stuttgartbib.css" title="default" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/verdemoderna.css" title="alternative stylesheet (green)" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/meiert-qa.css" title="QA stylesheet" />
+  <meta name="robots" content="noindex, nofollow" />
+  <meta name="googlebot" content="noindex, nofollow" />
 </head>
 
 <body>
@@ -179,6 +181,17 @@
       UN Convention on the Rights of Persons with Disabilities (2006).
       “Universal design” means the design of products, environments, programs and services to be usable by all people, to the greatest extent possible, without the need for adaptation or specialized design. “Universal design” shall not exclude assistive devices for particular groups of persons with disabilities where this is needed.
       https://www.futurelearn.com/courses/digital-accessibility/2/comments/19472271
+    -->
+    <!-- 
+      * "psychological disability"??
+        * = psychische Behinderung? https://www.myhandicap.de/gesundheit/psychische-behinderung/ 
+        * Boston University: Centre for Psychiatric Rehabilitation: "What is Psychiatric Disability and Mental Illness?" https://cpr.bu.edu/resources/reasonable-accommodations/what-is-psychiatric-disability-and-mental-illness
+      * Classifcation:
+        * ICD-10 (International Statistical Classification of Diseases and Related Health Problems, by WHO): https://en.wikipedia.org/wiki/ICD-10 
+        * DSM-5 (Diagnostic and Statistical Manual of Mental Disorders, Fifth Edition, by the American Psychiatric Association): https://en.wikipedia.org/wiki/DSM-5
+        * compare classification of autism
+      * Print disability
+        * Inclusive Publishing Hub (DAISY Consortium initiative): "Digital content empowers accessible reading": https://inclusivepublishing.org/consumer/accessible-reading/ 
     -->
   </main>
 
