--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" type="text/css" media="screen" href="./css/stuttgartbib.css" title="default" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="./css/verdemoderna.css" title="alternative stylesheet (green)" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/meiert-qa.css" title="QA stylesheet" />
+  <meta name="robots" content="noindex, nofollow" />
+  <meta name="googlebot" content="noindex, nofollow" />
 </head>
 
 <body>
