FL Digital Accessibility courses ended.

--- a/courses.html
+++ b/courses.html
@@ -116,7 +116,7 @@
         is a five-week course created by the <a href="http://gpii.eu/moocap/"><abbr>MOOC</abbr> Accessibility Partnership</a> 
         and that runs on FutureLearn.
         The first run of the course started on 17 October 2016 and ended on 20 November 2016. 
-        The second run started on 6 February 2017.
+        The second run started on 6 February 2017 and ended on 12 March 2017.
         <br />The content on which the course is based is available as a collection of 
         Open Educational Resources (<abbr>OERs</abbr>). You can find the list on the
         <a href="http://gpii.eu/moocap/?p=793"><abbr>MOOCAP</abbr> website</a>
