IBM Va11ys; aria-query; AOM.

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -149,6 +149,28 @@
         on LinkedIn (18 August 2015).
         <!-- @@install -->
       </li>
+      <li><abbr>IBM</abbr> Accessibility:
+        <strong><a href="https://github.com/IBMa/Va11yS">Va11ys</a></strong> (pronounced &ldquo;valleys&rdquo;):
+        <q>Testing the accessibility of <abbr>HTML</abbr> &amp; <abbr>ARIA</abbr> samples</q>.
+        This is a collection of code samples with the results of tests with assistive technologies 
+        (both for desktop and mobile devices).
+        The samples are available under the <abbr>MIT</abbr> licence.
+        For background about this project, see 
+        <a href="https://developer.ibm.com/open/openprojects/va11ys/">Va11ys</a>
+        on the <abbr>IBM</abbr> developerWorks site.
+        To test the samples with your own assistive technologies, go to the
+        <strong><a href="https://ibma.github.io/Va11yS/">Va11ys website</a></strong>.
+        <!-- @@test/check -->
+      </li>
+      <li>
+        <a href="https://github.com/A11yance/aria-query">aria-query</a>:
+        <q>Programmatic access to the ARIA specification</q>.
+        Licence: Apache 2.0.
+      </li>
+      <li>Web Incubator <abbr title="Community Group">CG</abbr>: 
+        <a href="https://github.com/WICG/aom"><abbr>AOM</abbr></a>:
+        <q>Accessibility Object Model</q> (draft specification; no licence).
+      </li>
     </ul>
     <!-- CSS layouts & accessibility?
       * CSS flexbox @ HTML5 Please: http://html5please.com/#flexbox 
