FAE 2 and AInspector Sidebar.

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -90,14 +90,33 @@
     <h2>Individual Tools</h2>
     <h3 id="codecheckers">Code Checkers</h3>
     <ul>
-      <li>European Internet Inclusion Initiative (<abbr>EIII</abbr>):
-        <a href="http://checkers.eiii.eu/"><abbr>EIII</abbr> Page Checker</a>:
-        tool where you can enter the <abbr>URL</abbr> of a web page that you want to evaluate.
-      </li>
       <li>Web<abbr title="Accessibility in Mind">AIM</abbr>:
         <a href="http://wave.webaim.org/">WAVE Web Accessibility Evaluation Tool</a>.
         Also available as 
         <a href="http://wave.webaim.org/extension/">browser extensions for Firefox and Chrome</a>.
+      </li>
+      <li>The 
+        <a href="http://fae.disability.illinois.edu/">Functional Accessibility Evaluator (<abbr>FAE</abbr>)</a>
+        developed Accessible <abbr>IT</abbr> Group at the University of Illinois
+        can evaluate the conformance of an entire website
+        against <abbr>WCAG</abbr> 2.0 Level A or Level AA.
+        The 
+        <a href="https://github.com/opena11y/fae2"><abbr>FAE</abbr>'s source code</a>
+        is available on GitHub under the Apache 2.0 licence.
+      </li>
+      <li>The
+        <a href="https://addons.mozilla.org/en-us/firefox/addon/ainspector-sidebar/">AInspector Sidebar</a>
+        is a Firefox add-on developed by the Accessible <abbr>IT</abbr> Group at the University of Illinois.
+        Like <abbr>FAE</abbr> it evaluate the conformance of web content
+        against <abbr>WCAG</abbr> 2.0 Level A or Level AA.
+        Like <abbr>FAE</abbr>, it uses the 
+        <a href="http://www.openajax.org/member/wiki/Accessibility">OpenAjax Alliance rules and rulesets</a>.
+        See also the 
+        <a href="http://ainspector.github.io/">AInspector Sidebar Documentation</a>.
+      </li>
+      <li>European Internet Inclusion Initiative (<abbr>EIII</abbr>):
+        <a href="http://checkers.eiii.eu/"><abbr>EIII</abbr> Page Checker</a>:
+        tool where you can enter the <abbr>URL</abbr> of a web page that you want to evaluate.
       </li>
       <li>
         <a href="https://github.com/yargalot/grunt-accessibility">Grunt Accessibility</a>,
