Groves: Diagnostic.css.

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -414,7 +414,13 @@
         <a href="https://github.com/j9t/qa-style-sheet"><abbr>QA</abbr> Style Sheet</a>:
         <abbr>CSS</abbr> file that highlights common <abbr>HTML</abbr> problems;
         not primarly geared towards accessibility evaluation.
-        (Licence: Apache 2.0).
+        (Licence: Apache 2.0.)
+      </li>
+      <li>Karl Groves:
+        <a href="https://github.com/karlgroves/diagnostic.css">Diagnostic.css</a>:
+        <abbr>CSS</abbr> file
+        <q>which allows the user to test for common errors in a page's markup</q>.
+        (Licence: undefined.)
       </li>
       <!-- 
       <li>
