--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -152,16 +152,14 @@
     <h3>Android Accessibility</h3>
     <ul>
       <li><strong><a
-        href="https://developer.android.com/guide/topics/ui/accessibility/index.html">Accessibility
-        | Android Developers</a></strong> (official <abbr>API</abbr>
-        documentation).
+        href="https://developer.android.com/guide/topics/ui/accessibility/index.html">Accessibility | Android Developers</a></strong> 
+        (official <abbr>API</abbr> documentation).
       </li>
-      <li><a href="http://www.google.com/accessibility/for-developers.html">Resources 
-        for Developers and Publishers</a> by Google Accessibility
-        provides some pointers and resources for developers.
+      <li><a href="http://www.google.com/accessibility/for-developers.html">Resources for Developers and Publishers</a> 
+        by Google Accessibility provides some pointers and resources for developers.
       </li>
       <li>
-        <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.accessibility.auditor">Google Accessibility Scanner</a>
+        <strong><a href="https://play.google.com/store/apps/details?id=com.google.android.apps.accessibility.auditor">Google Accessibility Scanner</a></strong>
         and 
         <a href="https://support.google.com/accessibility/android/faq/6376582?hl=en&rd=1">Get started with Accessibility Scanner</a>:
         Google's tool for scanning Android apps for accessibility issues.
