Accessibility Badging Program (Apr-May 2017).

--- a/courses.html
+++ b/courses.html
@@ -144,6 +144,36 @@
       </li>
     </ul>
 
+
+    <h2>Other Courses</h2>
+    <ul>
+      <li>Courses offered by the College of Applied Health Sciences at the University of Illinois at Urbana-Champaign, April–May 2017:
+        <a href="http://disability.illinois.edu/academic-support/accessible-it-group/badging" lang="en-US">Accessibility Badges Program</a>:
+        <ul>
+          <li>
+            <a href="http://disability.illinois.edu/academic-support/accessible-it-group/badging/formslinks">Web Design: Form Controls and Links</a>,
+            12 April 2017 (6 hours of instruction).
+          </li>
+          <li>
+            <a href="http://disability.illinois.edu/academic-support/accessible-it-group/badging/waeb">Web Design: Web Accessibility Evaluation Basics (3-part course)</a>:
+            3 sessions, on 17 April, 24 April and 1 May 2017, each with 2 hours of instruction.
+          </li>
+          <li>
+            <a href="http://disability.illinois.edu/academic-support/accessible-it-group/badging/widgetsaria">Web Design: Introduction to Accessible Web Widgets with <abbr>ARIA</abbr></a>:
+            26 April 2017 (6 hours of instruction).
+          </li>
+          <li>
+            <a href="http://disability.illinois.edu/academic-support/accessible-it-group/badging/multimedia">Web Design: Video Captioning, Audio Descriptions, and Accessible Media Players</a>:
+            3 May 2017 (6 hours of instruction).
+          </li>
+          <li>
+            <a href="http://disability.illinois.edu/academic-support/accessible-it-group/badging/navigation">Web Design: Landmarks, Headings, Page Titles and Navigation</a>:
+            17 May 2017 (4 hours of instruction).
+          </li>
+        </ul>
+      </li>
+    </ul>
+
   </main>
 
   <footer>
