Windows pour malvoyants.

--- a/accessibilityforusers.html
+++ b/accessibilityforusers.html
@@ -74,6 +74,10 @@
         <strong>Note</strong>: for more up-to-date information about Linux, see the page
         <a href="LinuxAccessibilityResources.html">Linux Accessibility Resources</a>.
       </li>
+      <li lang="fr">
+        <a href="http://www.windows8facile.fr/configurer-windows-pour-malvoyant/">Configurer Windows pour les malvoyants</a>,
+        01.04.2014.
+      </li>
     </ul>
 
     <h2 id="ua_extensionuser">Browser Features and Extensions for End Users</h2>
