Readability: ID; cf. Frequency Lists and Corpora.

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -308,7 +308,7 @@
     -->
 
 
-    <h2>Content Readability</h2>
+    <h2 id="readability">Content Readability</h2>
     <ul>
       <li>DuBay, William H.:
         <a href="http://files.eric.ed.gov/fulltext/ED490073.pdf">The Principles of Readability</a>, 2004.
@@ -379,7 +379,9 @@
         <a href="https://xkcd.com/simplewriter/">Simple Writer</a>.
       </li>
     </ul>
-
+    <p>See also
+      <a href="http://cstrobbe.github.io/languagelearning/misc/frequency-lists.html">Frequency Lists and Corpora</a>.
+    </p>
 
     <h2>Other Links</h2>
     <ul>
