Aphasia best practice recommendations.

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -151,6 +151,7 @@
       </li>
     </ul>
 
+    <h3>Machine-Readable Guideline Representations</h3>
     <p>Representation of the Web Content Accessibility Guidelines (<abbr>WCAG</abbr>) 2.0
       in a machine-processable format:
     </p>
@@ -179,6 +180,19 @@
         <a href="https://www.w3.org/TR/2013/NOTE-WCAG20-TECHS-20130905/">September 2013 version of the <abbr>WCAG</abbr> techniques</a>,
         which is now out of date.
         (See the <a href="https://www.w3.org/TR/WCAG20-TECHS/">latest version of Techniques for <abbr>WCAG</abbr> 2.0</a>.)
+      </li>
+    </ul>
+
+    <h3>Guidelines Focusing on Specific Target Groups or Disabilities</h3>
+    <ul>
+      <li>Aphasia United:
+        <a href="http://www.aphasiaunited.org/best-practice-recommendations/">Best practice recommendations</a>.
+        These recommendations are available in several languages,
+        including Chinese, Spanish, aphasia-friendly English and aphasia-friendly Japanese.
+        <!-- @@read!! -->
+        <!-- see also Professor Linda Worrall's research: https://shrs.uq.edu.au/profile/158/linda-worrall 
+          e.g. "The top ten: best practice recommendations for aphasia": http://espace.library.uq.edu.au/view/UQ:387323 
+        -->
       </li>
     </ul>
 
